feat(new-list): realizations with using protobuf
